--- a/provador.html
+++ b/provador.html
@@ -51,7 +51,7 @@
       border-spacing: 0;
     }
 
-    /* Layout geral */
+    /* Layout Geral */
     html, body {
       height: 100%;
     }
@@ -78,7 +78,8 @@
       background-color: #fff;
       box-sizing: border-box;
     }
-    /* Área do manequim e painel de controle na versão mobile */
+
+    /* Área do manequim e painel de controle para mobile */
     #mannequin-area {
       position: relative;
       width: 100%;
@@ -94,13 +95,14 @@
       overflow: hidden;
       border: 2px solid #ccc;
     }
+    /* Para manter o manequim 100% visível, usamos contain */
     #mannequin {
       position: absolute;
       width: 100%;
       height: 100%;
       top: 0;
       left: 0;
-      object-fit: cover;
+      object-fit: contain;
       z-index: 1;
     }
     .piece {
@@ -120,6 +122,7 @@
     .slide-in {
       animation: slideIn 0.5s ease forwards;
     }
+
     /* Painel de controle com opções de peças */
     #control-panel {
       width: 100%;
@@ -127,7 +130,6 @@
       padding: 5px;
       box-sizing: border-box;
       background-color: #fff;
-      overflow: hidden;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
@@ -178,7 +180,8 @@
       font-size: 10px;
       cursor: pointer;
     }
-    /* Media query para telas maiores */
+
+    /* Layout para telas maiores */
     @media (min-width: 768px) {
       #main-container {
         flex-direction: row;
@@ -188,7 +191,9 @@
         height: auto;
         padding: 10px;
       }
+      /* Manter o aspecto 1080x1920 e usar contain para não cortar */
       #mannequin-container {
+        width: 100%;
         aspect-ratio: 1080 / 1920;
       }
       #control-panel {
@@ -213,6 +218,7 @@
       <div id="mannequin-area">
         <div id="mannequin-container">
           <img id="mannequin" src="https://bastardadoll.github.io/frente.png" alt="Manequim">
+          <!-- As peças serão inseridas via JavaScript -->
         </div>
       </div>
       <div id="control-panel">
@@ -247,15 +253,15 @@
             Plug 1
           </button>
           <button class="piece-button" onclick="addPiece('plug', 2)">
-            <img src="https://bastardadoll.github.io/" alt="Plug 2" class="piece-thumbnail">
+            <img src="https://bastardadoll.github.io/plug2.png" alt="Plug 2" class="piece-thumbnail">
             Plug 2
           </button>
           <button class="piece-button" onclick="addPiece('vestido', 1)">
-            <img src="https://bastardadoll.github.io/" alt="Vestido 1" class="piece-thumbnail">
+            <img src="https://bastardadoll.github.io/vestido1.png" alt="Vestido 1" class="piece-thumbnail">
             Vestido 1
           </button>
           <button class="piece-button" onclick="addPiece('vestido', 2)">
-            <img src="https://bastardadoll.github.io/" alt="Vestido 2" class="piece-thumbnail">
+            <img src="https://bastardadoll.github.io/vestido2.png" alt="Vestido 2" class="piece-thumbnail">
             Vestido 2
           </button>
         </div>
@@ -331,8 +337,7 @@
           pieceEl.style.display = 'none';
         } else {
           pieceEl.style.display = 'block';
-          const newSrc = data.files[currentView][variation - 1];
-          pieceEl.src = newSrc;
+          pieceEl.src = data.files[currentView][variation - 1];
         }
       });
     }
