--- a/provador.html
+++ b/provador.html
@@ -243,7 +243,7 @@
             Shorts 1
           </button>
           <button class="piece-button" onclick="addPiece('shorts', 2)">
-            <img src="/a/4f54ef24-6c2a-417d-9926-db7e433bb6e2" alt="Shorts 2" class="piece-thumbnail">
+            <img src="https://bastardadoll.github.io/short1.png" alt="Shorts 2" class="piece-thumbnail">
             Shorts 2
           </button>
           <button class="piece-button" onclick="addPiece('calcinhas', 1)">
@@ -301,8 +301,8 @@
       shorts: {
         zIndex: 4,
         files: {
-          frente: ['https://bastardadoll.github.io/short1-frente.png', 'https://bastardadoll.github.io/short2-frente.png'],
-          verso: ['https://bastardadoll.github.io/short1-verso.png', 'https://bastardadoll.github.io/short2-verso.png']
+          frente: ['https://bastardadoll.github.io/short-frente1.png', 'https://bastardadoll.github.io/short2-frente.png'],
+          verso: ['https://bastardadoll.github.io/short-verso1.png', 'https://bastardadoll.github.io/short2-verso.png']
         }
       },
       calcinhas: {
