--- a/provador.html
+++ b/provador.html
@@ -294,8 +294,8 @@
       top: {
         zIndex: 2,
         files: {
-          frente: ['https://bastardadoll.github.io/top1-frente.png', 'https://bastardadoll.github.io/top2-frente.png'],
-          verso: ['top1-verso.png', 'top2-verso.png']
+          frente: ['https://bastardadoll.github.io/top-frente1.png', 'https://bastardadoll.github.io/top-frente2.png'],
+          verso: ['https://bastardadoll.github.io/top1-verso.png', 'https://bastardadoll.github.io/top2-verso.png']
         }
       },
       shorts: {
