--- a/provador.html
+++ b/provador.html
@@ -235,7 +235,7 @@
             Top 1
           </button>
           <button class="piece-button" onclick="addPiece('top', 2)">
-            <img src="/a/4f54ef24-6c2a-417d-9926-db7e433bb6e2" alt="Top 2" class="piece-thumbnail">
+            <img src="https://bastardadoll.github.io/top2.png" alt="Top 2" class="piece-thumbnail">
             Top 2
           </button>
           <button class="piece-button" onclick="addPiece('shorts', 1)">
