--- a/provador.html
+++ b/provador.html
@@ -295,7 +295,7 @@
         zIndex: 2,
         files: {
           frente: ['https://bastardadoll.github.io/top-frente1.png', 'https://bastardadoll.github.io/top-frente2.png'],
-          verso: ['https://bastardadoll.github.io/top-verso1.png', 'https://bastardadoll.github.io/top2-verso.png']
+          verso: ['https://bastardadoll.github.io/top-verso1.png', 'https://bastardadoll.github.io/top-verso2.png']
         }
       },
       shorts: {
