--- a/provador.html
+++ b/provador.html
@@ -1,243 +1,203 @@
 <!DOCTYPE html>
+
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8"> 
   <title>Provador Virtual</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <style>
     /* CSS Reset */
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-  color: #d35400;
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-}
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-  display: block;
-}
-body {
-  line-height: 1;
-  font-family: sans-serif;
-  background-color: #f0f0f0;
-}
-ol, ul {
-  list-style: none;
-}
-blockquote, q {
-  quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-  content: '';
-  content: none;
-}
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
+    html, body, div, span, applet, object, iframe,
+    h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+    a, abbr, acronym, address, big, cite, code,
+    del, dfn, em, img, ins, kbd, q, s, samp,
+    small, strike, strong, sub, sup, tt, var,
+    b, u, i, center,
+    dl, dt, dd, ol, ul, li,
+    fieldset, form, label, legend,
+    table, caption, tbody, tfoot, thead, tr, th, td,
+    article, aside, canvas, details, embed, 
+    figure, figcaption, footer, header, hgroup, 
+    menu, nav, output, ruby, section, summary,
+    time, mark, audio, video {
+      color: #d35400;
+      margin: 0;
+      padding: 0;
+      border: 0;
+      font-size: 100%;
+      font: inherit;
+      vertical-align: baseline;
+    }
+    article, aside, details, figcaption, figure,
+    footer, header, hgroup, menu, nav, section {
+      display: block;
+    }
+    body {
+      line-height: 1;
+      font-family: sans-serif;
+      background-color: #f0f0f0;
+    }
+    ol, ul {
+      list-style: none;
+    }
+    blockquote, q {
+      quotes: none;
+    }
+    blockquote:before, blockquote:after,
+    q:before, q:after {
+      content: '';
+      content: none;
+    }
+    table {
+      border-collapse: collapse;
+      border-spacing: 0;
+    }
 
-/* Layout Geral */
-html, body {
-  height: 100%;
-}
-#app-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  height: 100vh;
-  padding: 5px;
-  box-sizing: border-box;
-}
+    /* Layout Geral */
+    html, body {
+      height: 100%;
+    }
+    #app-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      height: 100vh;
+      padding: 5px;
+      box-sizing: border-box;
+    }
+    #header {
+      font-size: 1.8em;
+      color: #e67e22;
+      text-align: center;
+      margin-bottom: 5px;
+    }
+    #main-container {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      flex: 1;
+      border: 3px solid #e67e22;
+      background-color: #fff;
+      box-sizing: border-box;
+    }
 
-#header {
-  font-size: 2em;
-  color: #e67e22;
-  text-align: center;
-  margin-bottom: 10px;
-}
+    /* Área do manequim e painel de controle para mobile */
+    #mannequin-area {
+      position: relative;
+      width: 100%;
+      height: 65%;
+      box-sizing: border-box;
+      padding: 5px;
+    }
+    #mannequin-container {
+      position: relative;
+      width: 100%;
+      height: 100%;
+      background-color: #f2f2f2;
+      overflow: hidden;
+      border: 2px solid #ccc;
+    }
+    /* O manequim é 1920x1080 e usamos object-fit: contain para exibir a imagem inteira */
+    #mannequin {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      object-fit: contain;
+      z-index: 1;
+    }
+    .piece {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      transition: transform 0.5s ease, opacity 0.5s ease;
+      cursor: move;
+      user-select: none;
+      object-fit: contain;
+    }
+    @keyframes slideIn {
+      from { transform: translateX(100%); opacity: 0; }
+      to { transform: translateX(0); opacity: 1; }
+    }
+    .slide-in {
+      animation: slideIn 0.5s ease forwards;
+    }
 
-#main-container {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  flex: 1;
-  border: 3px solid #e67e22;
-  background-color: #fff;
-  box-sizing: border-box;
-  overflow: hidden;
-}
-
-@media (min-width: 768px) {
-  #main-container {
-    flex-direction: row;
-  }
-}
-
-#mannequin-area {
-  position: relative;
-  width: 100%;
-  height: 60%;
-  box-sizing: border-box;
-  padding: 5px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-@media (min-width: 768px) {
-  #mannequin-area {
-    width: 75%;
-    height: auto;
-    padding: 10px;
-  }
-}
-
-#mannequin-container {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  background-color: #f2f2f2;
-  overflow: hidden;
-  border: 2px solid #ccc;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-@media (min-width: 768px) {
-  #mannequin-container {
-    aspect-ratio: 16 / 9;
-  }
-}
-
-#mannequin {
-  max-width: 100%;
-  max-height: 100%;
-  object-fit: contain;
-  z-index: 1;
-}
-
-.piece {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  transition: transform 0.5s ease, opacity 0.5s ease;
-  cursor: move;
-  user-select: none;
-  object-fit: contain;
-}
-
-@keyframes slideIn {
-  from { transform: translateX(100%); opacity: 0; }
-  to { transform: translateX(0); opacity: 1; }
-}
-
-.slide-in {
-  animation: slideIn 0.5s ease forwards;
-}
-
-/* Painel de controle com opções de peças */
-#control-panel {
-  width: 100%;
-  height: 40%;
-  padding: 5px;
-  box-sizing: border-box;
-  background-color: #fff;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
-@media (min-width: 768px) {
-  #control-panel {
-    width: 25%;
-    height: auto;
-    overflow-y: auto;
-    padding: 10px;
-  }
-}
-
-#control-panel h2 {
-  color: #d35400;
-  font-size: 1.5em;
-  margin-bottom: 10px;
-  text-align: center;
-}
-
-.piece-selector {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 10px;
-  flex: 1;
-  overflow-y: auto;
-  justify-content: center;
-}
-
-.piece-button {
-  color: #d35400;
-  padding: 5px;
-  font-size: 14px;
-  background-color: #f0f0f0;
-  border: 1px solid #ccc;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-  width: 80px;
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.piece-button:hover {
-  background-color: #ddd;
-}
-
-.piece-thumbnail {
-  width: 60px;
-  height: 60px;
-  object-fit: contain;
-  margin-bottom: 5px;
-}
-
-#controls {
+    /* Painel de controle com opções de peças */
+    #control-panel {
+      width: 100%;
+      height: 35%;
+      padding: 5px;
+      box-sizing: border-box;
+      background-color: #fff;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+    }
+    #control-panel h2 {
+      color: #d35400;
+      font-size: 1.2em;
+      margin-bottom: 5px;
+      text-align: center;
+    }
+    .piece-selector {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(60px, 1fr));
+      gap: 3px;
+      padding: 3px;
+      flex: 1;
+      overflow-y: auto;
+    }
+    /* Os botões exibem imagens de opções em 720×720 (originais) mas serão redimensionadas para caber na grade */
+    .piece-button {
+      color: #d35400;
+      padding: 3px;
+      font-size: 10px;
+      background-color: #f0f0f0;
+      border: 1px solid #ccc;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+      width: 100%;
+      box-sizing: border-box;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+    .piece-button:hover {
+      background-color: #ddd;
+    }
+    .piece-thumbnail {
+      /* Como a imagem original é 720x720, a exibimos em um tamanho menor mantendo a proporção */
+      width: 100%;
+      height: auto;
+      max-width: 60px;
+      max-height: 60px;
+      margin-bottom: 2px;
+      object-fit: contain;
+    }#controls {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 10px;
-  padding: 10px 0;
+  gap: 5px;
+  padding: 10px;
 }
 
 #controls button {
   background-color: #e67e22;
   color: #fff;
   border: none;
-  padding: 10px 16px;
-  font-size: 16px;
+  padding: 8px 12px;
+  font-size: 14px;
   font-weight: bold;
   cursor: pointer;
   border-radius: 5px;
   transition: background-color 0.3s ease, transform 0.1s ease;
   text-align: center;
-  min-width: 140px;
+  min-width: 120px;
 }
 
 #controls button:hover {
@@ -250,25 +210,48 @@ html, body {
 
 @media (max-width: 480px) {
   #controls button {
-    font-size: 14px;
-    padding: 8px 12px;
-    min-width: 120px;
+    font-size: 12px;
+    padding: 6px 10px;
+    min-width: 100px;
   }
 }
 
 @media (min-width: 768px) {
-  .piece-selector {
-    gap: 15px;
-  }
-  .piece-button {
-    width: 80px;
-  }
   #controls button {
     font-size: 16px;
     padding: 10px 16px;
     min-width: 140px;
   }
 }
+
+    /* Layout para telas maiores */
+    @media (min-width: 768px) {
+      #main-container {
+        flex-direction: row;
+      }
+      #mannequin-area {
+        width: 75%;
+        height: auto;
+        padding: 10px;
+      }
+      /* Define o container do manequim com aspecto 1920x1080 (16:9) */
+      #mannequin-container {
+        width: 90%;
+        aspect-ratio: 1920 / 1080;
+      }
+      #control-panel {
+        width: 25%;
+        height: auto;
+        overflow-y: auto;
+        padding: 10px;
+      }
+      .piece-selector {
+        grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
+      }
+      #controls button {
+        font-size: 12px;
+      }
+    }
   </style>
 </head>
 <body>
@@ -340,125 +323,127 @@ html, body {
     }
   }
   </script>
-  <script>
+
+  <script type="module">
     let currentView = 'frente';
-const currentPieces = {};
-const piecesData = {
-  top: {
-    zIndex: 2,
-    files: {
-      frente: ['https://bastardadoll.github.io/top-frente1.png', 'https://bastardadoll.github.io/top-frente2.png'],
-      verso: ['https://bastardadoll.github.io/top-verso1.png', 'https://bastardadoll.github.io/top-verso2.png']
-    }
-  },
-  shorts: {
-    zIndex: 4,
-    files: {
-      frente: ['https://bastardadoll.github.io/short-frente1.png', 'https://bastardadoll.github.io/short2-frente.png'],
-      verso: ['https://bastardadoll.github.io/short-verso1.png', 'https://bastardadoll.github.io/short2-verso.png']
-    }
-  },
-  calcinhas: {
-    zIndex: 3,
-    files: {
-      frente: ['https://bastardadoll.github.io/calcinha-frente1.png', 'https://bastardadoll.github.io/calcinha-frente2.png'],
-      verso: ['https://bastardadoll.github.io/calcinha-frente2.png', 'https://bastardadoll.github.io/calcinha-verso2.png']
-    }
-  },
-  plug: {
-    zIndex: 5,
-    files: {
-      frente: [],
-      verso: ['https://bastardadoll.github.io/plug1-verso.png', 'https://bastardadoll.github.io/plug2-verso.png']
-    }
-  },
-  vestido: {
-    zIndex: 3,
-    files: {
-      frente: ['https://bastardadoll.github.io/vestido1-frente.png', 'https://bastardadoll.github.io/vestido2-frente.png'],
-      verso: ['https://bastardadoll.github.io/vestido1-verso.png', 'https://bastardadoll.github.io/vestido2-verso.png']
-    }
-  }
-};
+    const currentPieces = {};
+    const piecesData = {
+      top: {
+        zIndex: 2,
+        files: {
+          frente: ['https://bastardadoll.github.io/top-frente1.png', 'https://bastardadoll.github.io/top-frente2.png'],
+          verso: ['https://bastardadoll.github.io/top-verso1.png', 'https://bastardadoll.github.io/top-verso2.png']
+        }
+      },
+      shorts: {
+        zIndex: 4,
+        files: {
+          frente: ['https://bastardadoll.github.io/short-frente1.png', 'https://bastardadoll.github.io/short2-frente.png'],
+          verso: ['https://bastardadoll.github.io/short-verso1.png', 'https://bastardadoll.github.io/short2-verso.png']
+        }
+      },
+      calcinhas: {
+        zIndex: 3,
+        files: {
+          frente: ['https://bastardadoll.github.io/calcinha-frente1.png', 'https://bastardadoll.github.io/calcinha-frente2.png'],
+          verso: ['https://bastardadoll.github.io/calcinha-frente2.png', 'https://bastardadoll.github.io/calcinha-verso2.png']
+        }
+      },
+      plug: {
+        zIndex: 5,
+        files: {
+          frente: [],
+          verso: ['https://bastardadoll.github.io/plug1-verso.png', 'https://bastardadoll.github.io/plug2-verso.png']
+        }
+      },
+      vestido: {
+        zIndex: 3,
+        files: {
+          frente: ['https://bastardadoll.github.io/vestido1-frente.png', 'https://bastardadoll.github.io/vestido2-frente.png'],
+          verso: ['https://bastardadoll.github.io/vestido1-verso.png', 'https://bastardadoll.github.io/vestido2-verso.png']
+        }
+      }
+    };
 
-window.toggleView = function() {
-  currentView = currentView === 'frente' ? 'verso' : 'frente';
-  const mannequin = document.getElementById('mannequin');
-  mannequin.src = currentView === 'frente'
-    ? 'https://bastardadoll.github.io/frente.png'
-    : 'https://bastardadoll.github.io/verso.png';
+    window.toggleView = function() {
+      currentView = currentView === 'frente' ? 'verso' : 'frente';
+      const mannequin = document.getElementById('mannequin');
+      mannequin.src = currentView === 'frente'
+        ? 'https://bastardadoll.github.io/frente.png'
+        : 'https://bastardadoll.github.io/verso.png';
 
-  Object.keys(currentPieces).forEach(type => {
-    const pieceEl = currentPieces[type];
-    const data = piecesData[type];
-    const variation = pieceEl.dataset.variation;
-    if (!data.files[currentView] || !data.files[currentView].length) {
-      pieceEl.style.display = 'none';
-    } else {
-      pieceEl.style.display = 'block';
-      pieceEl.src = data.files[currentView][variation - 1];
+      Object.keys(currentPieces).forEach(type => {
+        const pieceEl = currentPieces[type];
+        const data = piecesData[type];
+        const variation = pieceEl.dataset.variation;
+        if (!data.files[currentView] || !data.files[currentView].length) {
+          pieceEl.style.display = 'none';
+        } else {
+          pieceEl.style.display = 'block';
+          pieceEl.src = data.files[currentView][variation - 1];
+        }
+      });
     }
-  });
-}
 
-window.addPiece = function(type, variation) {
-  const data = piecesData[type];
-  if (!data) return;
-  if (currentPieces[type]) {
-    const oldEl = currentPieces[type];
-    oldEl.classList.remove('slide-in');
-    oldEl.addEventListener('animationend', () => oldEl.remove());
-    delete currentPieces[type];
-    oldEl.remove();
-  }
-  const img = document.createElement('img');
-  img.classList.add('piece', 'slide-in');
-  const fileList = data.files[currentView] || [];
-  if (fileList.length === 0) return;
-  img.src = fileList[variation - 1];
-  img.dataset.type = type;
-  img.dataset.variation = variation;
-  img.style.zIndex = data.zIndex || 1;
-  const container = document.getElementById('mannequin-container');
-  container.appendChild(img);
-  makeDraggable(img);
-  currentPieces[type] = img;
-}
+    function addPiece(type, variation) {
+      const data = piecesData[type];
+      if (!data) return;
+      if (currentPieces[type]) {
+        const oldEl = currentPieces[type];
+        oldEl.classList.remove('slide-in');
+        oldEl.addEventListener('animationend', () => oldEl.remove());
+        delete currentPieces[type];
+        oldEl.remove();
+      }
+      const img = document.createElement('img');
+      img.classList.add('piece', 'slide-in');
+      const fileList = data.files[currentView] || [];
+      if (fileList.length === 0) return;
+      img.src = fileList[variation - 1];
+      img.dataset.type = type;
+      img.dataset.variation = variation;
+      img.style.zIndex = data.zIndex || 1;
+      const container = document.getElementById('mannequin-container');
+      container.appendChild(img);
+      makeDraggable(img);
+      currentPieces[type] = img;
+    }
+    window.addPiece = addPiece;
 
-window.removeAll = function() {
-  Object.keys(currentPieces).forEach(type => {
-    const pieceEl = currentPieces[type];
-    pieceEl.remove();
-  });
-  for (let key in currentPieces) {
-    delete currentPieces[key];
-  }
-}
+    window.removeAll = function() {
+      Object.keys(currentPieces).forEach(type => {
+        const pieceEl = currentPieces[type];
+        pieceEl.remove();
+      });
+      for (let key in currentPieces) {
+        delete currentPieces[key];
+      }
+    }
 
-function makeDraggable(el) {
-  let isDragging = false;
-  let offsetX = 0, offsetY = 0;
-  el.addEventListener('pointerdown', (e) => {
-    isDragging = true;
-    el.setPointerCapture(e.pointerId);
-    const rect = el.getBoundingClientRect();
-    offsetX = e.clientX - rect.left;
-    offsetY = e.clientY - rect.top;
-  });
-  el.addEventListener('pointermove', (e) => {
-    if (!isDragging) return;
-    const container = document.getElementById('mannequin-container');
-    const containerRect = container.getBoundingClientRect();
-    let newX = e.clientX - containerRect.left - offsetX;
-    let newY = e.clientY - containerRect.top - offsetY;
-    el.style.left = `${newX}px`;
-    el.style.top = `${newY}px`;
-  });
-  el.addEventListener('pointerup', (e) => {
-    isDragging = false;
-    el.releasePointerCapture(e.pointerId);
-  });
-}
+    function makeDraggable(el) {
+      let isDragging = false;
+      let offsetX = 0, offsetY = 0;
+      el.addEventListener('pointerdown', (e) => {
+        isDragging = true;
+        el.setPointerCapture(e.pointerId);
+        const rect = el.getBoundingClientRect();
+        offsetX = e.clientX - rect.left;
+        offsetY = e.clientY - rect.top;
+      });
+      el.addEventListener('pointermove', (e) => {
+        if (!isDragging) return;
+        const container = document.getElementById('mannequin-container');
+        const containerRect = container.getBoundingClientRect();
+        let newX = e.clientX - containerRect.left - offsetX;
+        let newY = e.clientY - containerRect.top - offsetY;
+        el.style.left = newX + 'px';
+        el.style.top = newY + 'px';
+      });
+      el.addEventListener('pointerup', (e) => {
+        isDragging = false;
+        el.releasePointerCapture(e.pointerId);
+      });
+    }
   </script>
 </body>
 </html>
