--- a/Alem-dos-Rotulos-Uma-Visao-Singular-da-Politica-e-da-Humanidade.html
+++ b/Alem-dos-Rotulos-Uma-Visao-Singular-da-Politica-e-da-Humanidade.html
@@ -160,7 +160,7 @@
     <p><strong>qual será a pegada que deixará nesta existência?</strong></p>
 
     <!-- Botão de download -->
-    <a href="https://bastardadoll.github.io/Alem-dos-Rótulos-Uma-Visao-Singular-da-Politica-e-da-Humanidade.pdf" download class="download-btn">
+    <a href="https://bastardadoll.github.io/Alem-dos-Rotulos-Uma-Visao-Singular-da-Politica-e-da-Humanidade.pdf" download class="download-btn">
       📄 Baixar PDF
     </a>
   </main>
