--- a/fluxograma.html
+++ b/fluxograma.html
@@ -193,7 +193,7 @@ a:hover {
 
     <div class="diagram-container">
         <h2>Representação Visual da Estrutura Modular</h2>
-        <img src="structure_diagram.png" alt="Diagrama da Estrutura Modular da Rede Social">
+        <img src="https://qfhfvd95uy8r31ee8i50.c.websim.ai/structure_diagram.png" alt="Diagrama da Estrutura Modular da Rede Social">
     </div>
 
     <div class="structure-details">
